--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                       <a class="nav-link active text-white fw-bold menu" aria-current="page" href="#">LINKS</a>
                     </li>
                     <li class="nav-item ">
-                      <a class="nav-link text-white fw-bold menu" href="#">ABOUT</a>
+                      <a class="nav-link text-white fw-bold menu" href="/portefolio/img/Thomas becq (final).pdf" target="_blank">DWNLD CV</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-white fw-bold menu" href="#">CONTACT</a>
+                      <a class="nav-link text-white fw-bold menu" href="CV.html" target="_blank">CONTACT</a>
                     </li>
                 </ul>
                 
@@ -167,7 +167,7 @@
           <i class="bi bi-twitter text-white p-2 bottom"></i>
           <i class="bi bi-instagram text-white p-2 bottom"></i>
           <i class="bi bi-discord text-white p-2 bottom"></i>
-          <i class="bi bi-github text-white p-2 bottom"></i>
+          <a href="https://github.com/skroo-dev" target="_blank"><i class="bi bi-github text-white p-2 bottom"></i></a>
         </div>
       </nav>
  
@@ -179,4 +179,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="app.js"></script>
 </body>
-</html>
+</html> 
+
+
