--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                       <a class="nav-link active text-white fw-bold menu" aria-current="page" href="#">LINKS</a>
                     </li>
                     <li class="nav-item ">
-                      <a class="nav-link text-white fw-bold menu" href="/portefolio/img/Thomas becq (final).pdf" target="_blank">DWNLD CV</a>
+                      <a class="nav-link text-white fw-bold menu" href="/img/Thomas becq (final).pdf" target="_blank">DWNLD CV</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link text-white fw-bold menu" href="CV.html" target="_blank">CONTACT</a>
